[package]
name = "coins_ledger-issue-128"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["full", "sync"] }
ethers = { features = [
  "ws",
  "ledger",
], git = "https://github.com/gakonst/ethers-rs", rev = "c6efa65" }
coins-ledger = { git = "https://github.com/summa-tx/coins", tag = "coins-ledger@0.9.1" }
